--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ body {}
     display: block;
     width: 100%;
     height: 100%;
-    background: #FDB;
+    background: #232323;
     cursor: move;
 }
