--- a/style.css
+++ b/style.css
@@ -1,9 +1,45 @@
-body {}
+@import url('https://rsms.me/inter/inter.css');
+
+body {
+    background: #BFB8A5;
+}
 
 .zdog-canvas {
     display: block;
     width: 100%;
     height: 100%;
-    background: #232323;
     cursor: move;
+}
+
+footer {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    padding: 0 24px;
+    z-index: 10;
+    pointer-events: none;
+}
+
+p {
+    /* font-family: 'Space Mono', monospace; */
+    /* font-family: 'Schoolbell', cursive; */
+    font-family: 'Inter', sans-serif;
+    font-size: 12vw;
+    /* font-weight: bold; */
+    line-height: 1.5;
+    text-align: center;
+}
+
+@media only screen and (min-width: 600px) {
+    footer {
+        padding: 80px;
+    }
+
+    p {
+        font-size: 12vw;
+    }
 }
